# wednesdaybot

./: .gitignore  README.md  mise.toml  pyproject.toml  samconfig.toml  template.yaml  wednesda.yaml  wednesday.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
tests/utils/: test_utils.py
utils/: utils.py
